[project]
name = "Pweave"
version = "0.30.3"
dependencies = [
"Markdown>=3.4",
"pygments",
"ipython",
"nbformat",
"nbconvert",
"jupyter_client",
]
authors = [
  {name = "mpastell"},
  ]
maintainers = [
  {name = "OGranert"} 
]  
readme = "README.rst"
keywords = ["swaeve","reports","python"]
license = {file = "LICENSE.txt"}

[project.urls]
Homepage = "https://mpastell.com/pweave/"
requires-python = ">=3.2"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
pweave = "pweave.scripts:weave"
ptangle = "pweave.scripts:tangle"
pypublish = "pweave.scripts:publish"
pweave-convert = "pweave.scripts:convert"

